[gd_scene load_steps=27 format=3 uid="uid://goxaxv03ucgy"]

[ext_resource type="Script" uid="uid://cn4grqaxixv5x" path="res://entities/player/player.gd" id="2"]
[ext_resource type="Script" uid="uid://du560503dixa4" path="res://entities/player/camera.gd" id="3"]
[ext_resource type="Material" uid="uid://xki18x6ywl7f" path="res://entities/player/player_full_health.tres" id="3_koyrj"]
[ext_resource type="Material" uid="uid://brbs2f63fqpgl" path="res://entities/player/player_mid_health.tres" id="3_ndr1b"]
[ext_resource type="AudioStream" uid="uid://d3lt1joxf3lqj" path="res://assets/zapsplat_cartoon_character_voice_high_pitched_ouch_ohh_as_if_sudden_pain_002_32264.ogg" id="4"]
[ext_resource type="Material" uid="uid://bvdfpemkovmh1" path="res://entities/player/player_low_health.tres" id="4_imwxo"]
[ext_resource type="PackedScene" uid="uid://by8fbbogtahlu" path="res://entities/player/player.blend" id="6_l52l8"]

[sub_resource type="SphereShape3D" id="SphereShape3D_se4do"]

[sub_resource type="CapsuleShape3D" id="1"]
radius = 1.0
height = 2.1

[sub_resource type="CylinderShape3D" id="2"]
height = 0.3
radius = 1.2

[sub_resource type="CylinderShape3D" id="5"]
height = 0.5
radius = 2.4

[sub_resource type="Animation" id="8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ModelPivot/player:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ModelPivot/player:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.325, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ModelPivot/player/Pupil:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ModelPivot/player/Pupil (Hurt):visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="9"]
resource_name = "dash"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ModelPivot/player:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 6.28319)]
}

[sub_resource type="Animation" id="3"]
resource_name = "float"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ModelPivot/player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.9),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Vector3(0, 0.1, 0), Vector3(0, 0.4, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ModelPivot/player:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.4, 0.7, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.167552, 0, 0), Vector3(0.010472, 0, 0), Vector3(0.200713, 0, 0), Vector3(0.010472, 0, 0), Vector3(-0.176278, 0, 0)]
}

[sub_resource type="Animation" id="4"]
resource_name = "spin-y"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ModelPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 720, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_et1fc"]
_data = {
&"RESET": SubResource("8"),
&"dash": SubResource("9"),
&"float": SubResource("3"),
&"spin-y": SubResource("4")
}

[sub_resource type="Animation" id="Animation_uvekq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ModelPivot/player/Pupil:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ModelPivot/player/Pupil (Hurt):visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_yisnt"]
resource_name = "hurt"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ModelPivot/player/Pupil:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ModelPivot/player/Pupil (Hurt):visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t8gbh"]
_data = {
&"RESET": SubResource("Animation_uvekq"),
&"hurt": SubResource("Animation_yisnt")
}

[sub_resource type="Animation" id="6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ModelPivot/player:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_daath"]
resource_name = "grow"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ModelPivot/player:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="7"]
resource_name = "shrink"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ModelPivot/player:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_svvlv"]
_data = {
&"RESET": SubResource("6"),
&"grow": SubResource("Animation_daath"),
&"shrink": SubResource("7")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dyt2w"]
emission_shape = 6
emission_ring_axis = Vector3(0, 1, 0)
emission_ring_height = 1.0
emission_ring_radius = 3.0
emission_ring_inner_radius = 1.5
emission_ring_cone_angle = 90.0
radial_accel_min = 10.0
radial_accel_max = 10.0
scale_min = 0.25

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8u7bp"]
transparency = 1
vertex_color_use_as_albedo = true
albedo_color = Color(0.901961, 0.901961, 0.901961, 0.588235)

[sub_resource type="SphereMesh" id="SphereMesh_r06iu"]
material = SubResource("StandardMaterial3D_8u7bp")

[node name="Player" type="CharacterBody3D" groups=["players"]]
collision_mask = 525006
script = ExtResource("2")
full_health_material = ExtResource("3_koyrj")
mid_health_material = ExtResource("3_ndr1b")
low_health_material = ExtResource("4_imwxo")
hurt_sound = ExtResource("4")

[node name="ModelPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 3.49691e-07, 0, 1, 0, -3.49691e-07, 0, 1, 0, 0, 0)

[node name="player" parent="ModelPivot" instance=ExtResource("6_l52l8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.325, 0)

[node name="Pupil (Hurt)" parent="ModelPivot/player" index="3"]
visible = false

[node name="CameraPivot" type="Node3D" parent="."]
script = ExtResource("3")

[node name="Horizontal" type="Node3D" parent="CameraPivot"]

[node name="Vertical" type="Node3D" parent="CameraPivot/Horizontal"]

[node name="SpringArm3D" type="SpringArm3D" parent="CameraPivot/Horizontal/Vertical"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
collision_mask = 68
shape = SubResource("SphereShape3D_se4do")
spring_length = 10.0

[node name="Camera3D" type="Camera3D" parent="CameraPivot/Horizontal/Vertical/SpringArm3D"]
unique_name_in_owner = true
process_mode = 1
current = true

[node name="PlayerCollisionShape" type="CollisionShape3D" parent="."]
visible = false
shape = SubResource("1")

[node name="EnemyDetector" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.6, 0)
visible = false
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="EnemyDetector"]
visible = false
shape = SubResource("2")

[node name="SpinArea" type="Area3D" parent="."]
visible = false
collision_mask = 102

[node name="SpinCollisionShape" type="CollisionShape3D" parent="SpinArea"]
visible = false
shape = SubResource("5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_et1fc")
}
autoplay = "float"

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationPlayer")
libraries = {
"": SubResource("AnimationLibrary_t8gbh")
}

[node name="EffectsAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_svvlv")
}

[node name="DashDurationTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4")
bus = &"Sound"

[node name="RayCasts" type="Node3D" parent="."]
visible = false

[node name="RayCast" type="RayCast3D" parent="RayCasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1.75, -1.1)
target_position = Vector3(0, -3, 0)
collision_mask = 36
collide_with_areas = true

[node name="RayCast2" type="RayCast3D" parent="RayCasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1.75, -1.1)
target_position = Vector3(0, -3, 0)
collision_mask = 36
collide_with_areas = true

[node name="RayCast3" type="RayCast3D" parent="RayCasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1.75, 1.8)
target_position = Vector3(0, -3, 0)
collision_mask = 36
collide_with_areas = true

[node name="RayCast4" type="RayCast3D" parent="RayCasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1.75, 1.8)
target_position = Vector3(0, -3, 0)
collision_mask = 36
collide_with_areas = true

[node name="BodySlamParticles" type="GPUParticles3D" parent="."]
emitting = false
amount = 60
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_dyt2w")
draw_pass_1 = SubResource("SphereMesh_r06iu")

[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="timeout" from="DashDurationTimer" to="." method="_on_DashDurationTimer_timeout"]

[editable path="ModelPivot/player"]
